[metadata]
name = oops-priyanka
version = 0.0.1
author = Priyanka
author_email = priyanka.sirohiya@gmail.com
description = A package to include oops concept to convert csv into different formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/priyankacode-123/Training.git
project_urls =
    Bug Tracker = https://github.com/priyankacode-123/Training.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = week1
packages = find:
python_requires = >=3.6

[options.packages.find]
where = week1